[package]
name = "acick"
version = "0.0.7-alpha.2"
authors = ["gky360 <gky360@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Tools for programming contests"
repository = "https://github.com/gky360/acick"
documentation = "https://docs.rs/acick"
readme = "README.md"
keywords = ["windows", "cli"]
categories = ["command-line-utilities"]

[workspace]
members = [".", "acick-util", "acick-dropbox", "acick-config", "acick-atcoder"]

[dependencies]
acick-atcoder = { version = "0.0.7-alpha.2", path = "./acick-atcoder" }
acick-config = { version = "0.0.7-alpha.2", path = "./acick-config" }
acick-dropbox = { version = "0.0.7-alpha.2", path = "./acick-dropbox" }
acick-util = { version = "0.0.7-alpha.2", path = "./acick-util" }
anyhow = "1.0.26"
chrono = { version = "0.4.10", features = ["serde"] }
console = "0.9.2"
# cookie = "0.12.0"
# cookie_store = "0.10.0"
# fs2 = "0.4.3"
getset = "0.0.9"
humantime = "2.0.0"
humantime-serde = "1.0.0"
itertools = "0.8.2"
lazy_static = "1.4.0"
maplit = "1.0.2"
once_cell = "1.3.1"
rayon = "1.3.0"
regex = "1.3.3"
# retry = "1.0.0"
# reqwest = { version = "0.10.1", default_features = false, features = ["rustls-tls", "blocking"] }
# scraper = "0.11.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
serde_yaml = "0.8.11"
structopt = "0.3.7"
strum = { version = "0.17.1", features = ["derive"] }
tempfile = "3.1.0"
tokio = { version = "0.2.11", features = ["rt-core", "time", "macros"] }
