[package]
name = "acick"
version = "0.0.9"
authors = ["gky360 <gky360@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Command line tools for programming contests"
repository = "https://github.com/gky360/acick"
documentation = "https://docs.rs/acick"
readme = "README.md"
keywords = ["windows", "cli"]
categories = ["command-line-utilities"]

[workspace]
members = [".", "acick-util", "acick-dropbox", "acick-config", "acick-atcoder"]

[dependencies]
acick-atcoder = { version = "0.0.9", path = "./acick-atcoder" }
acick-config = { version = "0.0.9", path = "./acick-config" }
acick-util = { version = "0.0.9", path = "./acick-util" }
anyhow = "1.0.26"
chrono = { version = "0.4.10", features = ["serde"] }
console = "0.11.2"
getset = "0.1.0"
humantime-serde = "1.0.0"
itertools = "0.9.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
serde_yaml = "0.8.11"
structopt = "0.3.7"
strum = { version = "0.18.0", features = ["derive"] }
tempfile = "3.1.0"
tokio = { version = "0.2.11", features = ["rt-core", "time", "macros"] }
