[package]
name = "acick-atcoder"
version = "0.0.9-alpha.1"
authors = ["gky360 <gky360@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Tools for acick crate to interact with AtCoder"
repository = "https://github.com/gky360/acick/tree/master/acick-atcoder"
documentation = "https://docs.rs/acick-atcoder"
readme = "README.md"

[dependencies]
acick-config = { version = "0.0.9-alpha.1", path = "../acick-config" }
acick-dropbox = { version = "0.0.9-alpha.1", path = "../acick-dropbox" }
acick-util = { version = "0.0.9-alpha.1", path = "../acick-util" }
anyhow = "1.0.26"
humantime = "2.0.0"
lazy_static = "1.4.0"
maplit = "1.0.2"
once_cell = "1.3.1"
rayon = "1.3.0"
regex = "1.3.3"
reqwest = { version = "0.10.1", default_features = false, features = ["rustls-tls", "blocking"] }
scraper = "0.11.0"
strum = { version = "0.18.0", features = ["derive"] }
tempfile = "3.1.0"
