[package]
name = "acick-dropbox"
version = "0.2.0"
authors = ["gky360 <gky360@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Dropbox API client for acick crate"
repository = "https://github.com/gky360/acick/tree/master/acick-dropbox"
documentation = "https://docs.rs/acick-dropbox"
readme = "README.md"

[dev-dependencies]
tempfile = "3.1.0"

[dependencies]
acick-util = { version = "0.2.0", path = "../acick-util" }
anyhow = "1.0.26"
dropbox-sdk = { version = "0.14.0", default_features = false, features = ["dbx_check", "dbx_files", "dbx_sharing", "default_client"] }
hyper = { version ="0.14.16", features = ["server"] }
rand = "0.7.3"
tokio = { version = "1.15.0", features = ["rt", "process", "macros", "sync"] }
url = "2.1.1"
