[package]
name = "acick-util"
version = "0.0.7-alpha.1"
authors = ["gky360 <gky360@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/gky360/acick"
documentation = "https://docs.rs/acick"
readme = "README.md"

[dependencies]
anyhow = "1.0.26"
bytefmt = "0.1.7"
console = "0.9.2"
getset = "0.0.9"
humantime-serde = "1.0.0"
indicatif = "0.14.0"
lazy_static = "1.4.0"
once_cell = "1.3.1"
regex = "1.3.3"
serde = { version = "1.0.104", features = ["derive"] }
shellexpand = "1.1.1"
strum = { version = "0.17.1", features = ["derive"] }
