[package]
name = "acick-util"
version = "0.2.0"
authors = ["gky360 <gky360@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Utils for acick crate"
repository = "https://github.com/gky360/acick/tree/master/acick-util"
documentation = "https://docs.rs/acick-util"
readme = "README.md"

[dev-dependencies]
serde_yaml = "0.8.11"
tempfile = "3.1.0"

[dependencies]
anyhow = "1.0.26"
bytefmt = "0.1.7"
console = "0.15.0"
cookie = "0.14.2"
cookie_store = "0.12.0"
dirs = "3.0.1"
fs2 = "0.4.3"
getset = "0.1.1"
humantime-serde = "1.0.0"
indicatif = "0.15.0"
lazy_static = "1.4.0"
once_cell = "1.3.1"
regex = "1.3.3"
retry = "1.0.0"
reqwest = { version = "0.10.1", default_features = false, features = ["rustls-tls", "blocking"] }
scraper = "0.12.0"
serde = { version = "1.0.104", features = ["derive"] }
shellexpand = "2.0.0"
strum = { version = "0.19.2", features = ["derive"] }
webbrowser = "0.5.2"
